# nextcv

./: .clang-format  .clang-tidy  .gitignore  .iwyu.imp  .pre-commit-config.yaml  404.html  CMakeLists.txt  CMakePresets.json  DOCS_SETUP.md  Makefile  README.md  STRUCTURE.md  build_docs.py  gen_ref_pages.py  index.html  meson.build  mkdocs.yml  objects.inv  pyproject.jetson.toml  pyproject.legacy.toml  pyproject.toml  ruff.toml  setup.py  sitemap.xml  test_api_structure.py
.cursor/: AGENTS.md
.github/workflows/: build-arm.yml  build-arm64.yml  ci.yml  docs.yml  publish.yml  release.yml  test.yml
cli/: index.html
cmake/: NextCVConfig.cmake.in
contributing/: index.html
docs/: README.md  gen_cli_pages.py  gen_ref_pages.py  getting-started.md  index.md  pybind11-guide.md
docs/examples/: index.md
docs/home/: contributing.md  getting-started.md  index.md
docs/includes/: abbreviations.md
docs/pybind11/: best-practices.md  index.md  pybind11-basics.md  resources.md  simple-tutorial.md  testing.md  when-to-use-cpp.md
examples/: CMakeLists.txt  cpp_example.cpp  cpp_hello.cpp  cpp_invert.cpp  eigen_example.py  index.html  mixed_api_example.py  nextcv.pc.in  python_api_example.py  python_example.py  quickstart.py  simplified_example.py
getting-started/: index.html
home/: index.html
home/contributing/: index.html
home/getting-started/: index.html
includes/abbreviations/: index.html
nextcv/: .clang-format  CMakeLists.txt  LICENSE  README.md  __init__.py  __init__.pyi  nextcv_py.pyi  pyproject.toml
nextcv/.github/workflows/: ci.yml
nextcv/_cpp/: __init__.py  nextcv_py.pyi
nextcv/_cpp/nextcv_py/: __init__.pyi  core.pyi  image.pyi  linalg.pyi  postprocessing.pyi
nextcv/_cpp/src/: CMakeLists.txt  meson.build
nextcv/_cpp/src/bindings/: bindings.cpp
nextcv/_cpp/src/core/: hello.cpp  hello.hpp  types.hpp  utils.hpp
nextcv/_cpp/src/image/: invert.cpp  invert.hpp
nextcv/_cpp/src/linalg/: matvec.cpp  matvec.hpp
nextcv/_cpp/src/postprocessing/: nms.cpp  nms.hpp  wbf.cpp  wbf.hpp
nextcv/api/: __init__.py
nextcv/core/: __init__.py  hello.py  utils.py
nextcv/examples/: cpp_hello.cpp  cpp_invert.cpp  python_example.py
nextcv/features/: __init__.py
nextcv/image/: __init__.py  color.py  compose.py  geometry.py  operations.py  ops.py  stitching.py  stitching_faster.py  stitching_rt.py  utils.py
nextcv/linalg/: __init__.py  ops.py
nextcv/nextcv/: __init__.py
nextcv/postprocessing/: __init__.py  boxes.py
nextcv/python/: __init__.py  io.py  utils.py  visualization.py
nextcv/sensors/: __init__.py  camera.py  parsers.py
nextcv/src/: CMakeLists.txt  hello.cpp  hello.hpp
nextcv/tests/: test_hello.py
nextcv/utils/: __init__.py
pybind11/: index.html
pybind11/best-practices/: index.html
pybind11/pybind11-basics/: index.html
pybind11/resources/: index.html
pybind11/simple-tutorial/: index.html
pybind11/testing/: index.html
pybind11/when-to-use-cpp/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/_cpp/: index.html
reference/core/: index.html
reference/core/hello/: index.html
reference/image/: index.html
reference/image/color/: index.html
reference/image/compose/: index.html
reference/image/geometry/: index.html
reference/image/ops/: index.html
reference/image/stitching/: index.html
reference/linalg/: index.html
reference/postprocessing/: index.html
reference/postprocessing/boxes/: index.html
reference/sensors/: index.html
reference/sensors/camera/: index.html
reference/sensors/parsers/: index.html
scripts/: build_legacy.sh
search/: search_index.json
src/: CMakeLists.txt  bindings.cpp  hello.cpp  hello.hpp  invert.cpp  invert.hpp
src/bindings/: bindings.cpp
src/core/: hello.cpp  hello.hpp  types.hpp  utils.cpp  utils.hpp
src/image/: invert.cpp  invert.hpp  threshold.cpp  threshold.hpp
src/image/operations/: invert.cpp  invert.hpp  threshold.cpp  threshold.hpp
src/imgproc/: invert.cpp  invert.hpp  threshold.cpp  threshold.hpp
src/postprocessing/: nms.cpp  nms.hpp
tests/: test_hello.py
tests/core/: test_hello.py
tests/fixtures/: watchkeeper_sensors.json  wk1280_sensors.json
tests/image/: __init__.py  test_ops.py  test_panorama.py  test_stitching.py
tests/postprocessing/: test_boxes.py
tests/sensors/: test_camera.py  test_parsers.py
