[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.10", "setuptools-scm<=8"]
build-backend = "scikit_build_core.build"

[project]
name = "nextcv"
dynamic = ["version"] # <-- let setuptools-scm derive version
description = "NextCV is like OpenCV but with modern tooling. A minimal, experimental CV library (C++ core + pybind11)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Kevin Serrano", email = "kserranov@gmail.com" }]
keywords = ["computer-vision", "cpp", "pybind11", "scikit-build-core"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
]

dependencies = ["numpy>=1.20.0", "opencv-python>=4.4.0"]

[dependency-groups]
dev = [
  "pre-commit",
  "pybind11>=2.10",
  "pytest>=7",
  "pytest-cov>=4.0",
  "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/kevinconka/nextcv.git"
Issues = "https://github.com/kevinconka/nextcv/issues"

# scikit-build-core configuration
# Reference: https://scikit-build-core.readthedocs.io/en/latest/configuration/
[tool.scikit-build]
wheel.packages = ["nextcv"]
cmake.version = ">=3.20"
build-dir = "build"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

# setuptools_scm configuration
# https://setuptools-scm.readthedocs.io/en/latest/config/
[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--cov=nextcv",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
]
