[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.10", "setuptools-scm<=8"]
build-backend = "scikit_build_core.build"

[project]
name = "nextcv"
dynamic = ["version"] # <-- let setuptools-scm derive version
description = "NextCV is like OpenCV but with modern tooling. A minimal, experimental CV library (C++ core + pybind11)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Kevin Serrano", email = "kserranov@gmail.com" }]
keywords = ["computer-vision", "cpp", "pybind11", "scikit-build-core"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
]

dependencies = ["numpy>=1.20.0", "opencv-python>=4.4.0"]

[dependency-groups]
dev = [
  "pre-commit",
  "pybind11>=2.10",
  "pytest>=7",
  "pytest-cov>=4.0",
  "ruff>=0.5",
]

[project.urls]
Repository = "https://github.com/kevinconka/nextcv.git"
Issues = "https://github.com/kevinconka/nextcv/issues"

# scikit-build-core configuration
# Reference: https://scikit-build-core.readthedocs.io/en/latest/configuration/
[tool.scikit-build]
wheel.packages = ["nextcv"]
cmake.version = ">=3.20"
build-dir = "build"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"

# setuptools_scm configuration
# https://setuptools-scm.readthedocs.io/en/latest/config/
[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --cov -s"

# Coverage settings
[tool.coverage.run]
source = ["nextcv"]

[tool.coverage.report]
include = ["nextcv/*"]
exclude_lines = ["if TYPE_CHECKING"]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Pylint settings
[tool.pylint]
ignored-modules = [
  "cv2",                   # doesn't ship with proper type stubs by default
  "nextcv._cpp.nextcv_py", # stubs for C++ module
]
jobs = 0
ignore = ["tests", "docs", "build", ".venv"]
ignore-paths = [".*tests.*.py$", ".*pyi$"]
max-args = 10
max-attributes = 10
max-line-length = 88
min-similarity-lines = 6
max-positional-arguments = 10 # counts also args with default values ?
disable = [
  "import-outside-toplevel",       # lazy loading
  "missing-function-docstring",    # handled by ruff
  "logging-fstring-interpolation",
  "too-few-public-methods",
  "broad-exception-caught",
]
good-names-rgxs = [
  "^K.*$", # Camera intrinsics matrix prefix
  "^R.*$", # Rotation matrix prefix
  "^H.*$", # Homography matrix prefix
  "^B.*$", # Batch size prefix
  "^C.*$", # Channel size prefix
  "^H.*$", # Height prefix
  "^W.*$", # Width prefix
]
