[build-system]
requires = ["meson-python", "meson", "ninja", "pybind11>=2.10"]
build-backend = "mesonpy"

[project]
name = "nextcv"
dynamic = ["version"] # provided by meson-python from meson.build
description = "Python-first computer vision library with C++ bdingings for speed."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Kevin Serrano", email = "kserranov@gmail.com" }]
keywords = ["computer-vision", "cpp", "pybind11", "meson-python"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "Operating System :: OS Independent",
]

dependencies = [
  "numpy>=1.19.0",
  "opencv-python>=4.4.0",
  "scipy>=1.7.0",
  "pydantic<2.0.0",
]

[dependency-groups]
dev = [
  "pre-commit",
  "pybind11>=2.10",
  "meson",
  "meson-python",
  "ninja",
  "pytest>=7",
  "pytest-cov>=4.0",
  "ipykernel",
  "pybind11-stubgen",
  "rich",
  "pillow",
  "plotly",
  "pandas",
  "nbformat",
]

[project.optional-dependencies]
docs = [
  "mkdocs-material[git]>=9.6.9",
  "mkdocstrings[python]>=0.29.0",
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-literate-nav>=0.6.2",
  "mkdocs-section-index>=0.3.9",
  "mkdocs-minify-plugin>=0.8.0",
  "griffe-fieldz>=0.2.1",
  "griffe-pydantic>=1.1.3",
]

[project.urls]
Repository = "https://github.com/kevinconka/nextcv.git"
Issues = "https://github.com/kevinconka/nextcv/issues"

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --cov -s"

# Coverage settings
[tool.coverage.run]
source = ["nextcv"]

[tool.coverage.report]
include = ["nextcv/*"]
exclude_lines = ["if TYPE_CHECKING"]
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Pylint settings
[tool.pylint]
ignored-modules = [
  "cv2",                   # doesn't ship with proper type stubs by default
  "nextcv._cpp.nextcv_py", # stubs for C++ module
]
jobs = 0
ignore = ["tests", "docs", "build", ".venv"]
ignore-paths = [".*tests.*.py$", ".*pyi$"]
max-args = 10
max-attributes = 10
max-line-length = 88
min-similarity-lines = 6
max-positional-arguments = 10 # counts also args with default values ?
disable = [
  "import-outside-toplevel",       # lazy loading
  "missing-function-docstring",    # handled by ruff
  "logging-fstring-interpolation",
  "too-few-public-methods",
  "broad-exception-caught",
  "no-name-in-module",
  "no-member",
]
good-names-rgxs = [
  "^K.*$", # Camera intrinsics matrix prefix
  "^R.*$", # Rotation matrix prefix
  "^H.*$", # Homography matrix prefix
  "^T.*$", # Transformation matrix prefix
  "^P.*$", # Homogeneous point prefix
  "^B.*$", # Batch size prefix
  "^C.*$", # Channel size prefix
  "^H.*$", # Height prefix
  "^W.*$", # Width prefix
]
